--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
-#set -g default-terminal "tmux-256color"
+# set -g default-terminal "tmux-256color"
 set -g default-terminal "xterm-256color"
-#set -ga terminal-overrides ",*256col*:Tc"
+# set -ga terminal-overrides ",*256col*:Tc"
 set -ga terminal-overrides ",xterm-256color:Tc"
 # action key
 unbind C-b
@@ -28,6 +28,12 @@ bind -r l select-pane -R
 # Moving window
 bind-key -n C-S-Left swap-window -t -1 \; previous-window
 bind-key -n C-S-Right swap-window -t +1 \; next-window
+
+# spliting pane
+bind "|" split-window -f -c "#{pane_current_path}"
+bind "\\" split-window -fh -c "#{pane_current_path}"
+bind "-" split-window -v -c "#{pane_current_path}"
+bind "_" split-window -fv -c "#{pane_current_path}"
 
 # Resizing pane
 bind -r C-k resize-pane -U 5
@@ -86,3 +92,18 @@ if-shell "uname -s | grep -q Darwin" "source ~/.config/tmux/macos.conf"
 
 source ~/.config/tmux/statusline.conf
 source ~/.config/tmux/utility.conf
+
+# List of plugins
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+#
+# set -g @plugin 'seebi/tmux-colors-solarized'
+# set -g @colors-solarized 'dark'
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# run '~/.config/tmux/plugins/tpm/tpm'
