--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,12 @@
 # set -g default-terminal "tmux-256color"
-set -g default-terminal "xterm-256color"
+# set -g default-terminal "xterm-256color"
 # set -ga terminal-overrides ",*256col*:Tc"
-set -ga terminal-overrides ",xterm-256color:Tc"
+# set -ga terminal-overrides ",xterm-256color:Tc"
+# Undercurl
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
 # action key
 unbind C-b
 set-option -g prefix C-t
@@ -90,20 +95,36 @@ set -g set-titles-string "#T"
 # import
 if-shell "uname -s | grep -q Darwin" "source ~/.config/tmux/macos.conf"
 
-source ~/.config/tmux/statusline.conf
+#source ~/.config/tmux/statusline.conf
 source ~/.config/tmux/utility.conf
 
 # List of plugins
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
-#
-# set -g @plugin 'seebi/tmux-colors-solarized'
-# set -g @colors-solarized 'dark'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dracula/tmux'
+
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
+# prefix + I (install)
+# prefix + U (update)
+# prefix + alt + u (uninstall)
+
+
+# available plugins: battery, cpu-usage, gpu-usage, ram-usage, network, network-bandwith, weather, time
+# set -g @dracula-plugins "battery cpu-usage ram-usage network time"
+set -g @dracula-plugins "cpu-usage ram-usage time"
+# set -g @dracula-plugins " "
+# available colors: white, gray, dark_gray, light_purple, dark_purple, cyan, green, orange, red, pink, yellow
+set -g @dracula-border-contrast true
+set -g @dracula-show-flags true
+set -g @dracula-show-powerline true
+# it can accept `session`, `smiley`, `window`, or any character.
+set -g @dracula-show-left-icon session
+
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# run '~/.config/tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
