--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -95,13 +95,13 @@ set -g set-titles-string "#T"
 # import
 if-shell "uname -s | grep -q Darwin" "source ~/.config/tmux/macos.conf"
 
-#source ~/.config/tmux/statusline.conf
+source ~/.config/tmux/statusline.conf
 source ~/.config/tmux/utility.conf
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dracula/tmux'
+# set -g @plugin 'dracula/tmux'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -116,14 +116,14 @@ set -g @plugin 'dracula/tmux'
 
 # available plugins: battery, cpu-usage, gpu-usage, ram-usage, network, network-bandwith, weather, time
 # set -g @dracula-plugins "battery cpu-usage ram-usage network time"
-set -g @dracula-plugins "cpu-usage ram-usage time"
+# set -g @dracula-plugins "cpu-usage ram-usage time"
 # set -g @dracula-plugins " "
 # available colors: white, gray, dark_gray, light_purple, dark_purple, cyan, green, orange, red, pink, yellow
-set -g @dracula-border-contrast true
-set -g @dracula-show-flags true
-set -g @dracula-show-powerline true
+# set -g @dracula-border-contrast true
+# set -g @dracula-show-flags true
+# set -g @dracula-show-powerline true
 # it can accept `session`, `smiley`, `window`, or any character.
-set -g @dracula-show-left-icon session
+# set -g @dracula-show-left-icon session
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
