--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -51,6 +51,8 @@ window:
     y: 2
     x: 8
 
+  opacity: 0.9
+
   # Spread additional padding evenly around the terminal content.
   # dynamic_padding: false
 
@@ -333,7 +335,7 @@ font:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-#background_opacity: 1.0
+# background_opacity: 1.0
 
 #selection:
   # This string contains all characters that are used as separators for
