--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -58,8 +58,8 @@ set-option -g status-fg cyan
 set-option -g status-bg black
 set -g pane-active-border-style fg=colour166,bg=default
 set -g window-style fg=colour10,bg=default
-set -g window-active-style fg=colour12,bg=default
-# set -g window-active-style fg=white,bg=default
+# set -g window-active-style fg=colour12,bg=default
+set -g window-active-style fg=white,bg=default
 set-option -g history-limit 64096
 
 set -sg escape-time 10
