--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,7 +1,7 @@
 - clean: ['~']
 
 - link:
-    #~/.zshrc: zshrc
+    ~/.zshrc: zshrc
     ~/.config/nvim: nvim
     ~/.config/tmux: tmux
     ~/.config/alacritty: alacritty
