--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,6 +46,10 @@ bind -r C-j resize-pane -D 5
 bind -r C-h resize-pane -L 5
 bind -r C-l resize-pane -R 5
 
+# pane movement
+# bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
+# bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
+
 #### basic settings
 
 set-option -g status-justify "left"
