Add pane movement bindings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,6 +34,10 @@ bind -r l select-pane -R
 bind-key -n C-S-Left swap-window -t -1 \; previous-window
 bind-key -n C-S-Right swap-window -t +1 \; next-window
 
+# pane movement
+bind-key < command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind-key > command-prompt -p "send pane to:"  "join-pane -t '%%'"
+
 # spliting pane
 bind "|" split-window -f -c "#{pane_current_path}"
 bind "\\" split-window -fh -c "#{pane_current_path}"
